<resources>
    <string name="app_name">Proyecto_Alarma_PM</string>

    <!-- About Us Screen -->
    <string name="about_us_title">Sobre Nosotros</string>
    <string name="About">Esta aplicación ha sido desarrollada por el equipo de 2DAM_M: Jorge Díaz Esteban, Diego Díaz-Hellín López, Rodrigo Herrero Hernández y Pablo Mata de la Fuente.</string>
    <string name="Objective">Nuestro objetivo es asegurar que nunca más olvides una toma. Más que un simple recordatorio, hemos diseñado una solución interactiva: para detener la alarma, deberás acercarte y escanear el código QR o de barras de tu medicamento. Así, garantizamos no solo que lo recuerdes, sino que lo tengas en la mano.</string>
    <string name="Contact">Si tiene cualquier problema con la aplicación contacte con nosotros al siguiente correo: correoinventado@ifp.es</string>
    <string name="ToTheMain">Pag Principal</string>
    <string name="Close">Cerrar app</string>

    <!-- Add/Edit Pill Screen -->
    <string name="Duration">Duración (ej: 1 mes)</string>
    <string name="Save">Guardar</string>
    <string name="Delete">Eliminar</string>
    <string name="RtList">Volver a la lista</string>
    <string name="ScanLens">Escanear con Lens</string>
    <string name="AddHourList">Añadir Hora a la lista</string>
    <string name="TakeHour">Hora de la toma (ej: 08:30)</string>
    <string name="PillName">Nombre de la pastilla</string>
    
    <!-- Pill List Screen -->
    <string name="NotMeds">No hay medicamentos</string>
    <string name="ConfMed">Aún no has añadido niguna pastilla</string>
    <string name="ConfBtn">Pulsa el botón \'Añadir\' para empezar</string>
    <string name="AddPill">Añadir pastilla</string>
    <string name="AboutUs">Sobre nosotros</string>
    <string name="Name">Nombre</string>
    <string name="TimesDay">X veces al día</string>

    <string name="btn_alarm_off">ESCANEA PARA APAGAR</string>
    <string name="hora_de_la_medicacion">¡HORA DE TU MEDICACIÓN!</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="img_splash">Imagen principal para splash screen</string>
</resources>